Dostosowanie serwisu do nowego formatu danych

--- a/src/main/resources/templates/PdfTemplate.html
+++ b/src/main/resources/templates/PdfTemplate.html
@@ -250,7 +250,7 @@
 		#foreach ( $czlonekKomisji in $form.czlonkowieKomisji)
 		<tr>
 			<td class="lp" style="width: 20px; vertical-align: top">${velocityCount}.</td>
-			<td style="vertical-align:top">${czlonekKomisji.imionaINazwisko} ($czlonekKomisji.funkcjaWKomisji)</td>
+			<td style="vertical-align:top">${czlonekKomisji.imie1} ${czlonekKomisji.imie2} ${czlonekKomisji.nazwisko} (${czlonekKomisji.funkcja})</td>
 		</tr>
 		#end
 	</table>
