Obrazek QR na środku strony

--- a/src/main/resources/templates/PdfTemplate.html
+++ b/src/main/resources/templates/PdfTemplate.html
@@ -257,7 +257,7 @@
 
 </form>
 
-	<img src="qrcode.jpeg" alt="barcode"></img>
+	<div align="center"><img src="qrcode.jpeg" alt="barcode"></img></div>
 
 </body>
 </html>
