Korekta szablonu - uwagi były odczytywane nieprawidłowo

--- a/src/main/resources/templates/2015_parliament_periphery.html
+++ b/src/main/resources/templates/2015_parliament_periphery.html
@@ -224,7 +224,7 @@
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td style="vertical-align: top">${form.comments.comments15}</td>
+			<td style="vertical-align: top">${form.results.comments.comments15}</td>
 		</tr>
 
 		<tr>
@@ -233,7 +233,7 @@
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td style="vertical-align: top">${form.comments.comments16}</td>
+			<td style="vertical-align: top">${form.results.comments.comments16}</td>
 		</tr>
 
 		<tr>
@@ -242,7 +242,7 @@
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td style="vertical-align: top">${form.comments.comments17}</td>
+			<td style="vertical-align: top">${form.results.comments.comments17}</td>
 		</tr>
 
 		<tr>
@@ -251,7 +251,7 @@
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td style="vertical-align: top">${form.comments.comments18}</td>
+			<td style="vertical-align: top">${form.results.comments.comments18}</td>
 		</tr>
 		<tr>
 			<td style="vertical-align: top">19.</td>
@@ -259,7 +259,7 @@
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td style="vertical-align: top">${form.comments.comments19}</td>
+			<td style="vertical-align: top">${form.results.comments.comments19}</td>
 		</tr>
 		<tr>
 			<td style="vertical-align: top">20.</td>
@@ -267,7 +267,7 @@
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td style="vertical-align: top">${form.comments.comments20}</td>
+			<td style="vertical-align: top">${form.results.comments.comments20}</td>
 		</tr>
 		<tr>
 			<td style="vertical-align: top">21.</td>
@@ -275,7 +275,7 @@
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td style="vertical-align: top">${form.comments.comments21}</td>
+			<td style="vertical-align: top">${form.results.comments.comments21}</td>
 		</tr>
 	</table>
 
